# waysted

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
cli/: Cargo.toml
cli/src/: data_output.rs  main.rs  tui.rs  utils.rs
core/: Cargo.toml
core/src/: compositor.rs  database.rs  lib.rs
core/src/compositor/: hyprland.rs  niri.rs
daemon/: Cargo.toml
daemon/src/: daemon.rs  main.rs
nix/: hm-module.nix
