[workspace]
members = [ "cli","core", "daemon"]
resolver = "3"

[workspace.dependencies]
niri-ipc = "=25.8.0"
log = "0.4.28"
env_logger = "0.11.8"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.12.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

